tests/language_modules/16_control_flow_edges/valid/if_else_both_return.vf
module Control.IfElseReturn

function classify(amount: Integer) returns Integer
is
    if amount > 0 then
        return 1
    else
        return 0
    end if
end classify

procedure main()
is
    check classify(1) = 1
end main

end Control.IfElseReturn