tests/language_modules/16_control_flow_edges/invalid_semantics/if_branch_local_not_visible_after.vf
module Control.IfScope

procedure main()
is
    if true then
        let branch_total: Integer = 1
        check branch_total = 1
    end if
    check branch_total = 1
end main

end Control.IfScope